force-app/main/default/objects/TechRep__c/TechRep__c.object-meta.xml
<CustomObject>
    <label>TechRep</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>TechRep Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TechReps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>