force-app/main/default/objects/TechRep__c/fields/Repair_Order__c.field-meta.xml
<CustomField>
    <fullName>Repair_Order__c</fullName>
    <label>Repair Order</label>
    <referenceTo>Repair_Order__c</referenceTo>
    <relationshipLabel>TechReps</relationshipLabel>
    <relationshipName>TechReps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>