force-app/main/default/objects/TechRep__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>TechReps</relationshipLabel>
    <relationshipName>TechReps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>