force-app/main/default/objects/TechRep__c/fields/Techs_Usage__c.field-meta.xml
<CustomField>
    <fullName>Techs_Usage__c</fullName>
    <label>Techs Usage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>